--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:fontFamily="@font/cabin_sketch"
+        android:fontFamily="@font/antic"
         android:gravity="center"
         android:padding="16dp"
         android:text="@string/app_name"
