--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,7 +7,7 @@
     android:background="@color/dark_purple"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".UserActivity">
+    tools:context=".ui.UserActivity">
 
     <TextView
         android:layout_width="wrap_content"
